Pass path segments to catch-all rewrite

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -8,7 +8,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/[...all]"
+      "destination": "/api/[...all]?all=$1"
     }
   ]
 }
