Add SPA rewrite for router

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,6 +9,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/api/[...all]?all=$1"
+    },
+    {
+      "source": "/((?!api).*)",
+      "destination": "/"
     }
   ]
 }
